# mandelbrot-explorer

./: CMakeLists.txt  README.md  explorer.cpp  explorer.h  main.cpp  palette.h
